# midas

./: README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
notebooks/: test_functions.ipynb
src/features/: preprocessing_for_trend_detection.py  preprocessing_for_volume_anomaly.py
src/models/: concat.py  trend_detection.py  volume_anomaly.py
src/utils/: exceptions.py  logger.py
src/visualization/: plots_for_trend.py  plots_for_volume.py
