[tool.poetry]
name = "test-midas"
version = "0.1.0"
description = ""
authors = ["belousm <mike.belous@gmail.com>"]
readme = "README.md"
packages = [{include = "test_midas"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
envyaml = "^1.10.211231"
tqdm = "^4.64.1"
datetime = "^4.7"
argparse = "^1.4.0"
pandas = "^1.5.1"
dvc = {extras = ["gdrive"], version = "^2.34.2"}
pyarrow = "^10.0.0"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
dvc-gdrive = "^2.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
